...
                                                <rect key="frame" x="5" y="120" width="404" height="34"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vql-r9-dKa">
                                                        <rect key="frame" x="34" y="0.0" width="360" height="34"/>
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <rect key="frame" x="5" y="859" width="404" height="40"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Admin Settings Access Below" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1j-Nb-ku0">
                                                        <rect key="frame" x="0.0" y="0.0" width="364" height="40"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <rect key="frame" x="5" y="164" width="404" height="34"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z2b-m2-52x">
                                                        <rect key="frame" x="34" y="0.0" width="360" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        <rect key="frame" x="10" y="0.0" width="384" height="30"/>
                                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                        <state key="normal" title="Submit">
                                                            <color key="titleColor" red="0.18789657360000001" green="0.044661117350000001" blue="0.075365865840000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
...
                                                            <constraint firstAttribute="width" constant="100" id="XiV-K5-EV6"/>
                                                        </constraints>
                                                        <state key="normal" title="Admin Login">
                                                            <color key="titleColor" red="0.18789657360000001" green="0.044661117350000001" blue="0.075365865840000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
...
                                                        </connections>
                                                    </button>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Admin Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mBd-fN-vFN">
                                                        <rect key="frame" x="5" y="0.0" width="289" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lYb-8J-VEn">
                                                    <rect key="frame" x="5" y="22.5" width="46.5" height="16"/>
                                                    <constraints>
...
                                        <rect key="frame" x="20" y="5" width="179.5" height="30"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        <state key="normal" title="Publish">
                                            <color key="titleColor" red="0.1881645918" green="0.042947925630000001" blue="0.074506722390000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        </state>
...
