...
            }
            
            self.datepicker.setDate(Date(), animated: true)
            setDefaultDate()
            self.switch_marketing.setOn(true, animated: true)
            // alert is then created to notify the user
            createAlert(title: "Well Done", message: "Submission Sent Sucessfully, Thank you for Registering Your Interest", action_title: "Finish")
        }
        else {
            // if a field is incorrect the user will be prompted
            createAlert(title: "Invalid", message: "One or More of Your Entries is Invalid", action_title: "Try Again")
        }
    }
...
